# kny-mkdocs

./: .dockerignore  .gitignore  README.md  hatch_build.py  pyproject.toml
.devcontainer/: compose.yaml  devcontainer.json  docker-compose.yml  post-create-command.sh
docs_example/: Dockerfile  compose.yml  docker-compose.yml  mkdocs.yml
docs_example/docs/: index.md
kny_mkdocs/: utils.py
kny_mkdocs/badge/: badge.css  plugin.py
kny_mkdocs/common/: admonition_idea.css  mathjax.js  plugin.py
kny_mkdocs/external_link_icon/: external_link_icon.css  plugin.py
kny_mkdocs/godot_ref/: plugin.py
kny_mkdocs/source_ref/: plugin.py
