[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kny_mkdocs"
version = "1.3.0"
description = "Kenyoni MkDocs Plugins"
authors = [
    { name = "Kenyoni Software", email = "software@kenyoni.eu" }
]
maintainers = [
    { name = "Kenyoni Software", email = "software@kenyoni.eu" }
]
license = { text = "Proprietary License" }
classifiers = [
    "License :: Other/Proprietary License"
]
requires-python = ">= 3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "mkdocs-material>=9.6.3",
]

[project.entry-points."mkdocs.plugins"]
kny_badge = "kny_mkdocs.badge.plugin:Plugin"
kny_common = "kny_mkdocs.common.plugin:Plugin"
kny_external_link_icon = "kny_mkdocs.external_link_icon.plugin:Plugin"
kny_godot_ref = "kny_mkdocs.godot_ref.plugin:Plugin"
kny_source_ref = "kny_mkdocs.source_ref.plugin:Plugin"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = ["kny_mkdocs*"]

[tool.black]
line-length = 140

[tool.isort]
profile = "black"
known_first_party = ["kny_mkdocs"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
line_length = 140
multi_line_output = 3
include_trailing_comma = true
